# libsplitcl

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.inc  README.md
AnalysisPass/: CMakeLists.txt  Makefile  Makefile.inc  README
AnalysisPass/include/: AnalysisPass.h  ConditionBuilder.h  IndexExprBuilder.h  Utils.h
AnalysisPass/src/: AnalysisPass.cpp  ConditionBuilder.cpp  IndexExprBuilder.cpp  Utils.cpp
ClInline/: CMakeLists.txt  Makefile  README
ClInline/src/: ClInline.cpp
ClTransform/: CMakeLists.txt  Makefile
ClTransform/src/: ClTransform.cpp
LibKernelExpr/: CMakeLists.txt  Makefile
LibKernelExpr/include/: ArgumentAnalysis.h  GuardExpr.h  Indirection.h  Interval.h  KernelAnalysis.h  ListInterval.h  NDRange.h  WorkItemExpr.h
LibKernelExpr/include/IndexExpr/: IndexExpr.h  IndexExprArg.h  IndexExprBinop.h  IndexExprCast.h  IndexExprConst.h  IndexExprHB.h  IndexExprIndirection.h  IndexExprInterval.h  IndexExprLB.h  IndexExprMax.h  IndexExprMin.h  IndexExprOCL.h  IndexExprUnknown.h  IndexExprValue.h  IndexExprs.h
LibKernelExpr/src/: ArgumentAnalysis.cpp  GuardExpr.cpp  Indirection.cpp  Interval.cpp  KernelAnalysis.cpp  ListInterval.cpp  NDRange.cpp  WorkItemExpr.cpp
LibKernelExpr/src/IndexExpr/: IndexExpr.cpp  IndexExprArg.cpp  IndexExprBinop.cpp  IndexExprCast.cpp  IndexExprConst.cpp  IndexExprHB.cpp  IndexExprIndirection.cpp  IndexExprInterval.cpp  IndexExprLB.cpp  IndexExprMax.cpp  IndexExprMin.cpp  IndexExprOCL.cpp  IndexExprUnknown.cpp  IndexExprValue.cpp
libsplit/: CMakeLists.txt  Makefile  Makefile.inc  README  mergekernels-char.cl  mergekernels-double.cl  mergekernels-float.cl
libsplit/include/: Algebra.h  BufferManager.h  BufferManagerOptim.h  BufferManagerSimple.h  ContextHandle.h  Debug.h  Define.h  DeviceInfo.h  Globals.h  KernelHandle.h  Logger.h  MemoryHandle.h  MemoryHandleOptim.h  OpenCLFunctions.h  Options.h  ProgramHandle.h  Retainable.h  Scheduler.h  SchedulerAKGR.h  SchedulerAutoAbs.h  SchedulerBadBroyden.h  SchedulerBroyden.h  SchedulerEnv.h  SchedulerFixPoint.h  SchedulerMKGR.h  Utils.h
libsplit/src/: Algebra.cpp  Buffer.cpp  BufferManager.cpp  BufferManager.h  BufferManagerOptim.cpp  BufferManagerSimple.cpp  CommandQueue.cpp  Context.cpp  ContextHandle.cpp  Debug.cpp  Define.h  DeviceInfo.cpp  Driver.cpp  Driver.h  Event.cpp  EventFactory.cpp  EventFactory.h  Globals.cpp  Globals.h  Init.cpp  Init.h  Kernel.cpp  KernelHandle.cpp  Logger.cpp  MemoryHandle.cpp  MemoryHandleOptim.cpp  OpenCLFunctions.cpp  Options.cpp  Options.h  Platform.cpp  Program.cpp  ProgramHandle.cpp  Sampler.cpp  Scheduler.cpp  SchedulerAKGR.cpp  SchedulerAutoAbs.cpp  SchedulerBadBroyden.cpp  SchedulerBroyden.cpp  SchedulerEnv.cpp  SchedulerFixPoint.cpp  (+2 more)
libsplit/src/Dispatch/: CommandQueue.cpp  Context.cpp  Device.cpp  Enqueue.cpp  Event.cpp  Kernel.cpp  MemoryObject.cpp  OpenCLFunctions.cpp  OpenCLFunctions.h  Platform.cpp  Program.cpp  Sampler.cpp
libsplit/src/Handle/: ContextHandle.cpp  ContextHandle.h  KernelHandle.cpp  KernelHandle.h  MemoryHandle.cpp  MemoryHandle.h  ProgramHandle.cpp  ProgramHandle.h
libsplit/src/Queue/: Command.cpp  Command.h  DeviceLFQueue.cpp  DeviceLFQueue.h  DevicePthreadQueue.cpp  DevicePthreadQueue.h  DeviceQueue.cpp  DeviceQueue.h  Event.h  LockFreeQueue.cpp  LockFreeQueue.h
libsplit/src/Scheduler/: MultiKernelScheduler.h  MultiKernelSolver.cpp  MultiKernelSolver.h  Scheduler.cpp  (+21 more)
(+12 files in other folders)
